# simple-gmail-notifier

./: .gitignore  CMakeLists.txt  README.md  build_package.sh
data/: config.glade  simple-gmail-notifier.desktop  simple-gmail-notifier.indicator
debian/: changelog  control  copyright  prerm  rules  rules-cpack
include/: simple-gmail-checker.h  simple-gmail-notifier.h
src/: simple-gmail-checker.c  simple-gmail-notifier-config.c  simple-gmail-notifier.c
